# off_highway_sensor_drivers

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
doc/: intended_use.md
off_highway_can/: CMakeLists.txt  README.md  package.xml
off_highway_can/config/: sender_params.yaml
off_highway_can/include/off_highway_can/: can_message.hpp  crc.hpp  helper.hpp  receiver.hpp  sender.hpp
off_highway_can/include/off_highway_can/impl/: can_message_impl.hpp
off_highway_can/src/: can_message.cpp  crc.cpp  helper.cpp  receiver.cpp  sender.cpp
off_highway_can/test/: test_encode_decode.cpp
off_highway_common/: CMakeLists.txt  README.md  package.xml
off_highway_common/config/: receiver_params.yaml
off_highway_common/foss_documentation/: libcan-encode-decode.oslic
off_highway_common/include/off_highway_common/: can_message.hpp  crc.hpp  helper.hpp  receiver.hpp  sender.hpp
off_highway_common/include/off_highway_common/impl/: can_message_impl.hpp
off_highway_common/src/: can_message.cpp  crc.cpp  helper.cpp  receiver.cpp  sender.cpp
off_highway_common/test/: test_encode_decode.cpp
off_highway_general_purpose_radar/: CMakeLists.txt  README.md  package.xml
off_highway_general_purpose_radar/config/: receiver_params.yaml
off_highway_general_purpose_radar/include/off_highway_general_purpose_radar/: pcl_point_target.hpp  receiver.hpp
off_highway_general_purpose_radar/launch/: receiver.launch  receiver.launch.py
off_highway_general_purpose_radar/src/: receiver.cpp  receiver_node.cpp
off_highway_general_purpose_radar/test/: test_pcl_point_target.cpp  test_receiver.cpp  test_receiver.test  test_receiver_information.cpp  test_receiver_targets.cpp
off_highway_general_purpose_radar_msgs/: CMakeLists.txt  package.xml
off_highway_general_purpose_radar_msgs/msg/: Information.msg  Target.msg  TargetA.msg  TargetB.msg  Targets.msg
off_highway_premium_radar/: CMakeLists.txt  README.md  package.xml
off_highway_premium_radar/cmake/: off_highway_premium_radar-extras.cmake
off_highway_premium_radar/config/: driver.yaml
off_highway_premium_radar/doc/: design.md
off_highway_premium_radar/foss_documentation/: udp_driver.oslic
off_highway_premium_radar/include/off_highway_premium_radar/: driver.hpp  location_data_handler.hpp  node.hpp  pdu_definitions.hpp  range.hpp  udp_socket.hpp
off_highway_premium_radar/include/off_highway_premium_radar/converters/: default_converter.hpp  pcl_radar_point_type.hpp
off_highway_premium_radar/include/off_highway_premium_radar/interface/: converter.hpp  receiver.hpp  sender.hpp
off_highway_premium_radar/launch/: driver_launch.py
off_highway_premium_radar/src/: driver.cpp  helper.hpp  location_data_handler.cpp  main.cpp  node.cpp  pdu_definitions.cpp  udp_socket.cpp
off_highway_premium_radar/src/converters/: default_converter.cpp  ros_message_conversions.hpp
off_highway_premium_radar_msgs/: CMakeLists.txt  README.md  package.xml
off_highway_premium_radar_msgs/msg/: DiagnosticsEthernetConfigurationInformation.msg  DoIpInformation.msg  EgoVehicleData.msg  EgoVehicleInput.msg  InterferenceIndicator.msg  LocationAttributes.msg  LocationAttributesHeader.msg  LocationAttributesPacket.msg  LocationDataHeader.msg  MeasurementCycleSyncData.msg  MisalignmentPacket.msg  OperationMode.msg  SensorBroadcast.msg  SensorBroadcastData.msg  SensorDtcInformation.msg  SensorEthernetConfigurationInformation.msg  SensorFeedback.msg  SensorFieldOfView.msg  SensorModulationPerformance.msg  SensorStateInformation.msg  Time.msg
off_highway_premium_radar_msgs/srv/: MeasurementProgram.srv  SensorModeRequest.srv
off_highway_radar/: CMakeLists.txt  README.md  package.xml
off_highway_radar/config/: receiver_params.yaml  sender_params.yaml
off_highway_radar/include/off_highway_radar/: pcl_point_object.hpp  receiver.hpp  sender.hpp
off_highway_radar/launch/: receiver.launch  receiver.launch.py  sender.launch  sender.launch.py
off_highway_radar/src/: receiver.cpp  receiver_node.cpp  sender.cpp  sender_node.cpp
off_highway_radar/test/: test_pcl_point_object.cpp  test_receiver.cpp  test_receiver.test  test_receiver_information.cpp  test_receiver_objects.cpp  test_sender.cpp  test_sender.test
off_highway_radar_msgs/: CMakeLists.txt  README.md  package.xml
off_highway_radar_msgs/msg/: Information.msg  Object.msg  ObjectA.msg  ObjectB.msg  Objects.msg
off_highway_sensor_drivers/: CMakeLists.txt  package.xml
off_highway_uss/: CMakeLists.txt  README.md  package.xml
off_highway_uss/config/: receiver_params.yaml  sender_params.yaml
off_highway_uss/include/off_highway_uss/: interpolate_line.hpp  pcl_point_object.hpp  receiver.hpp  sender.hpp
off_highway_uss/launch/: receiver.launch  receiver.launch.py  sender.launch  sender.launch.py
off_highway_uss/src/: interpolate_line.cpp  receiver.cpp  receiver_node.cpp  sender.cpp  sender_node.cpp
off_highway_uss/test/: test_helper.hpp  test_pcl_point_object.cpp  test_receiver.cpp  test_receiver.test  test_receiver_echos.cpp  test_receiver_information.cpp  test_receiver_objects.cpp  test_receiver_range.cpp  test_sender.cpp  test_sender.test
off_highway_uss_msgs/: CMakeLists.txt  README.md  package.xml
off_highway_uss_msgs/msg/: DirectEcho.msg  DirectEchos.msg  Echo.msg  Information.msg  MaxDetectionRange.msg  Object.msg  Objects.msg
