<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_can</name>
  <version>0.4.0</version>
  <description>The off_highway_can package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0, MIT</license>

  <author email="robin.petereit@de.bosch.com">Robin Petereit</author>
  <author email="marcus.huenerbein@digital-workbench.de">Marcus Huenerbein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
