<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_common</name>
  <version>0.1.0</version>
  <description>The off_highway_common package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0, MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>

  <test_depend>rosunit</test_depend>
</package>
