<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_general_purpose_radar_msgs</name>
  <version>0.4.0</version>
  <description>The off_highway_general_purpose_radar_msgs package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0</license>

  <author email="robin.petereit@de.bosch.com">Robin Petereit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
