<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_premium_radar</name>
  <version>0.4.0</version>
  <description>The off_highway_premium_radar package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0</license>

  <author email="robin.petereit@de.bosch.com">Robin Petereit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>asio_cmake_module</buildtool_depend>

  <depend>asio</depend>
  <depend>io_context</depend>
  <depend>rclcpp</depend>

  <!-- For default converter -->
  <depend>diagnostic_updater</depend>
  <depend>libpcl-all-dev</depend>
  <depend>off_highway_premium_radar_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
