<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_radar</name>
  <version>0.1.0</version>
  <description>The off_highway_radar package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0</license>

  <author email="robin.petereit@de.bosch.com">Robin Petereit</author>
  <author email="marcus.huenerbein@digital-workbench.de">Marcus Huenerbein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>off_highway_common</depend>
  <depend>off_highway_radar_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
