<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_sensor_drivers</name>
  <version>0.1.0</version>
  <description>The off_highway_sensor_drivers package</description>
  <maintainer email="robin.petereit@de.bosch.com">Robin Petereit</maintainer>
  <license>Apache-2.0</license>

  <author email="marcus.huenerbein@digital-workbench.de">Marcus Huenerbein</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>off_highway_common</exec_depend>
  <exec_depend>off_highway_radar</exec_depend>
  <exec_depend>off_highway_radar_msgs</exec_depend>
  <exec_depend>off_highway_uss</exec_depend>
  <exec_depend>off_highway_uss_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
